# binuid-cli

./: .gitignore  Cargo.toml  README.md
src/: args.rs  build.rs  deploy.rs  dev.rs  generate_template.rs  main.rs  publish.rs  serve.rs  template.rs
src/builder/: mod.rs
src/commands/: build.rs  mod.rs  serve.rs  template_generator.rs
src/compiler/: mod.rs
src/compiler/file/: mod.rs
src/compiler/llvm_compiler/: mod.rs
src/compiler/llvm_compiler/ast/: addr_space.rs  aggregate_expr.rs  aggregate_inst.rs  alias.rs  alignment.rs  alloc_inst.rs  arg.rs  array_const.rs  atomic_ordering.rs  atomic_rmw_inst.rs  attr_group_def.rs  auth.rs  bin_op.rs  binary_expr.rs  binary_inst.rs  bitwise_expr.rs  bitwise_inst.rs  block_address_const.rs  call_inst.rs  calling_conv.rs  case.rs  catch_pad_inst.rs  clause.rs  cleanup_pad_inst.rs  cmp_xchg_inst.rs  comdat.rs  comment.rs  constant.rs  constant_expr.rs  conversion_expr.rs  conversion_inst.rs  dereferenceable.rs  dll_storage_class.rs  exception_arg.rs  exception_scope.rs  f_cmp_inst.rs  f_pred.rs  fast_math_flag.rs  fence_inst.rs  float_lit.rs  (+81 more)
src/compiler/llvm_compiler/grammar/: keywords.pest  llvm.pest
src/compiler/llvm_compiler/parser/: mod.rs
src/config/: builders.rs  dependencies.rs  files.rs  mod.rs  zip_files.rs
src/file_ops/: mod.rs
src/metadata/: mod.rs
src/package/: dependencies.rs  mod.rs  package.rs
src/servers/: mod.rs
src/servers/grpc_server/: grpc_service.rs  mod.rs
src/servers/http_server/: mod.rs
src/servers/http_server/router/: mod.rs  (+5 more)
src/toml_config/: mod.rs
src/zip_ops/: mod.rs
(+26 files in other folders)
