[package]
name = "binuid"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = {version = "4.5", features = ["derive", "color"]  }
toml = {version = "0.8", features = ["preserve_order"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.26", features = ["macros", "rt-multi-thread", "rt", "net"]}
hyper = {version = "1.4", features = ["server", "client", "http1", "http2"]}
serde_json = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"]}