[package]
name = "binuid"
version = "0.1.0"
edition = "2021"


[dependencies]
binuid-shared = {version = "0.1.0", path = "../binuid-shared"}
binuid-shared-wasm = {version = "0.1.0", path = "../binuid-shared-wasm"}
#prost-types = "0.12"
#prost = "0.12"
#tonic = {version = "0.10", default-features = false, features = ["prost", "codegen", "tls", "tls-roots", "tls-webpki-roots"]} #0.8 features = ["prost", "codegen", "tls", "tls-roots", "tls-webpki-roots"]
#tonic = {version = "0.8", default-features = false, features = ["prost", "codegen", "tls", "tls-roots", "tls-webpki-roots"]} #0.8 features = []
#tonic-web = { version = "0.10" } #0.4
#tonic-web = { version = "0.4" } #0.4



[build-dependencies]
tonic-build = { version = "0.10", default-features = false, features = ["prost",]} #0.8
#tonic-build = { version = "0.8", default-features = false, features = ["prost",]} #0.8